--- a/main.ipynb
+++ b/main.ipynb
@@ -39,6 +39,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# **Labeling**"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
@@ -145,6 +152,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# **EDA**"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
@@ -167,6 +181,13 @@
     "plt.xlabel('Emotions')\n",
     "sns.despine(top = True, right = True, left = False, bottom = False)\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# **Data Preprocessing**"
    ]
   },
   {
@@ -622,6 +643,13 @@
     "x_train = np.expand_dims(x_train, axis=2)\n",
     "x_test = np.expand_dims(x_test, axis=2)\n",
     "x_train.shape, y_train.shape, x_test.shape, y_test.shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# **CNN**"
    ]
   },
   {
@@ -1251,7 +1279,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# LSTM"
+    "# **LSTM**"
    ]
   },
   {
@@ -1567,7 +1595,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# CLSTM"
+    "# **CLSTM**"
    ]
   },
   {
