Add classification report to other models

--- a/main.ipynb
+++ b/main.ipynb
@@ -1544,6 +1544,32 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pred_test = model.predict(x_test)\n",
+    "y_pred = encoder.inverse_transform(pred_test)\n",
+    "y_test = encoder.inverse_transform(y_test)\n",
+    "\n",
+    "y_pred_labels = np.argmax(y_pred, axis=1)\n",
+    "y_test_labels = np.argmax(y_test, axis=1)\n",
+    "\n",
+    "accuracy = accuracy_score(y_pred_labels, y_test_labels)\n",
+    "precision = precision_score(y_test_labels, y_pred_labels, average='weighted')\n",
+    "recall = recall_score(y_test_labels, y_pred_labels, average='weighted')\n",
+    "f1 = f1_score(y_test_labels, y_pred_labels, average='weighted')\n",
+    "\n",
+    "print(f\"Accuracy: {accuracy}\")\n",
+    "print(f\"Precision: {precision}\")\n",
+    "print(f\"Recall: {recall}\")\n",
+    "print(f\"F1-score: {f1}\")\n",
+    "\n",
+    "print(classification_report(y_test, y_pred))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 83,
    "metadata": {},
    "outputs": [
@@ -1951,6 +1977,32 @@
    ],
    "source": [
     "hist1=model000.fit(x_train, y_train, batch_size=64, epochs=40, validation_data=(x_test, y_test))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pred_test = model.predict(x_test)\n",
+    "y_pred = encoder.inverse_transform(pred_test)\n",
+    "y_test = encoder.inverse_transform(y_test)\n",
+    "\n",
+    "y_pred_labels = np.argmax(y_pred, axis=1)\n",
+    "y_test_labels = np.argmax(y_test, axis=1)\n",
+    "\n",
+    "accuracy = accuracy_score(y_pred_labels, y_test_labels)\n",
+    "precision = precision_score(y_test_labels, y_pred_labels, average='weighted')\n",
+    "recall = recall_score(y_test_labels, y_pred_labels, average='weighted')\n",
+    "f1 = f1_score(y_test_labels, y_pred_labels, average='weighted')\n",
+    "\n",
+    "print(f\"Accuracy: {accuracy}\")\n",
+    "print(f\"Precision: {precision}\")\n",
+    "print(f\"Recall: {recall}\")\n",
+    "print(f\"F1-score: {f1}\")\n",
+    "\n",
+    "print(classification_report(y_test, y_pred))"
    ]
   },
   {
