--- a/main.ipynb
+++ b/main.ipynb
@@ -1548,7 +1548,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pred_test = model.predict(x_test)\n",
+    "pred_test = model01.predict(x_test)\n",
     "y_pred = encoder.inverse_transform(pred_test)\n",
     "y_test = encoder.inverse_transform(y_test)\n",
     "\n",
@@ -1985,7 +1985,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pred_test = model.predict(x_test)\n",
+    "pred_test = model000.predict(x_test)\n",
     "y_pred = encoder.inverse_transform(pred_test)\n",
     "y_test = encoder.inverse_transform(y_test)\n",
     "\n",
